--- a/ДОМ/index.html
+++ b/ДОМ/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <ul class="elements__list">
+    <!-- <ul class="elements__list">
         <li class="elements__item">
             <p id="test" class="text"></p>
         </li>
@@ -34,6 +34,22 @@
     <input type="text">
     <input type="checkbox">
     <input type="radio">
+
+  ///////////////////////////////////// -->
+
+    <!-- <article>
+        <h2 class="article__title"></h2>
+        <p class="article__text"></p>
+        <img class="article__photo" src="" alt="">
+    </article>  -->
+
+    <article class="product">
+        <h2 class="product__name">Назва</h2>
+        <p class="product__descr">Опис</p>
+        <p product__pridct>Ціна: 1111 кредитів</p>
+  </article>
+  <div class="js-products"></div>
+
 </body>
 <script type="module" src="./dom.js"></script>
 </html>
