--- a/Події/index.html
+++ b/Події/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="button__element" type="button">тиць</button>
+    <!-- <button class="button__element" type="button">тиць</button>
     
     <input class="checkbox__element" type="checkbox" name="" id="">
     <div class="box"></div>
@@ -18,7 +18,10 @@
 
     
     <p class="text__element"></p>
-    <p class="second-text__element"></p>
+    <p class="second-text__element"></p> -->
+
+    <div id="box"></div>
+
     <script type="module" src="./index.js"></script>
 </body>
 </html>
