--- a/Події/index.html
+++ b/Події/index.html
@@ -20,7 +20,14 @@
     <p class="text__element"></p>
     <p class="second-text__element"></p> -->
 
-    <div id="box"></div>
+    <!-- <div id="box"></div> -->
+
+    <!-- <div class="">hello </div> -->
+
+    <!-- <button class="js-clear">Очистити</button>
+    <p class="output js-output"></p> -->
+
+    <div class="block"></div>
 
     <script type="module" src="./index.js"></script>
 </body>
